--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -11,18 +11,45 @@ content are required.
 
 In this thesis, an overview on the R\&D of planar pixel sensors for
 CLIC is given. Prototypes with thin and active-edge sensors are
-designed. During this thesis, we span a large set of activities for
-the characterisation of these assemblies in test-beam, laboratory
-measurements and simulations. A summary is given in the following.
+studied. We span a large set of activities for the characterisation of
+these assemblies in test-beam and laboratory measurements. All studies
+are accompanied by simulations.
 
-\cref{ch:CLIC} gives an overview on the CLIC experiment. The
-accelerator is briefly described and the physics potential of the
-experiment is given. The requirements on the CLIC detector are
-presented with a focus of the vertex detector which is the main
-subject of the work presented. The flavour-tagging performance of the
-CLIC vertex detector is studied in full detector simulations. The
-conclusions show that the material budget of the detector must be as
-low as possible to achieve higher flavour-tagging efficiencies.
+The physics goals set challenging requirements on the design of the
+CLIC detector. The vertex detector is responsible for the efficient
+tagging of heavy quarks through the precise measurement of the
+displaced vertices. For achieving high efficiencies, a low material
+content of $\sim0.2\%$~X\textsubscript{0} per vertex layer and a high
+single-point resolution of $3\,\micron$ for pixels are required. The
+flavour-tagging performance of the CLIC vertex detector in full
+detector simulations have shown that the material budget of the
+detector must be as low as possible to achieve higher flavour-tagging
+efficiencies. To attain both requirements on the material content and
+the resolution, hybrid solutions with $50\,\micron$ thick sensors are
+foreseen to be coupled to $50\,\micron$ thick readout ASICs with
+$25\,\micron$ pixel pitch.
+
+We have focused on the performance of thin planar silicon sensors for
+the CLIC vertex detector. The Timepix3 pixel readout ASIC is chosen as
+a test-vehicle for thin sensors. With its low front-end noise of
+$\sim80$ electrons, it allows for operating the chip at the low
+thresholds of $\sim500$ electrons. This ASIC provides internal
+test-pulse injections for the calibration of the threshold DAC value
+and the TOT into energy depositions and validated with simulations.
+
+The CLICdp Timepix3 telescope is used for the reconstruction of the
+tracks with a high resolution and in-pixel studies on the devices
+under test (DUT). The telescope is implemented in AllPix
+simulations. The tracking resolution of the telescope on the DUT of
+$\sim2\,\micron$ is extracted from the simulation. This is in
+agreement with the expectations.
+
+First, we have investigated on the spatial resolutions achieved with
+thin sensors. Assemblies with $50\,\micron$ to $150\,\micron$ thick
+sensors bump-bonded to Timepix3 readout ASICs are measured during
+test-beam campaigns at the CERN SPS.
+
+  
 
 \cref{sec:SiliconTheory} gives an introduction to semiconductor
 material with an accent on silicon which is predominant in tracking
