[ThinSensors] Dominik's comments

--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -518,6 +518,8 @@ a good estimation of the tracking resolution on the DUT.
 
 
 \subsection{Tracking resolution on the DUT}
+\label{sec:TrackResOnDUT}
+
 The tracking residuals on the DUT in the x and y directions are shown
 in \cref{fig:DUT_MC_track}. This value can be only obtained in
 simulations, as the MC position is needed. For this calculation, the
@@ -548,7 +550,7 @@ $2\,\micron$ due to the tails of the distribution. A more strict cut
 on the $\chi^2$/NDF discards tracks in the tails and reduces the RMS
 of the distribution but also causes loss of statistics.
 
-I%% n the y-direction, the residuals show a shift of
+%% In the y-direction, the residuals show a shift of
 %% $\sim1\,\micron$. This can be explained to the fact that in the
 %% y-direction, the three planes before the DUT are rotated in an
 %% asymmetric way compared to the three other planes after the DUT in the
