--- a/include/appendix_ThinSensors.tex
+++ b/include/appendix_ThinSensors.tex
@@ -6,8 +6,8 @@
 %% --------------------------------------------- %%
 \section{Depletion voltage}
 
-The measured depletion voltage for all the assemblies listed in
-\cref{tab:Timepix3Assemblies}. \cref{sec:ThinSensors_depletionVoltage}
+The measured depletion voltage for all assemblies listed in
+\cref{tab:nominalBiasThreshold}. \cref{sec:ThinSensors_depletionVoltage}
 describes the method used for calculating the depletion.
 
 \begin{figure}[htbp] \centering
@@ -40,13 +40,13 @@ describes the method used for calculating the depletion.
   %   \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0002_J05.pdf}
   %   \caption{W2\_J5}
   % \end{subfigure}
-  \caption{The most probable value of the measured energy deposition as
-    a function of the bias voltage for the assemblies listed in
-    \cref{tab:Timepix3Assemblies}. Straight lines are used to fit the
-    slope and the plateau regions. The depletion voltage corresponds
-    to the intersection of these two regions and shown in a red dashed
-    line. The continuous red line shows the nominal operating bias
-    voltage.}
+  \caption{The most probable value of the measured energy deposition
+    as a function of the bias voltage for the assemblies listed in
+    \cref{tab:nominalBiasThreshold}. Straight lines are used to fit
+    the slope and the plateau regions. The depletion voltage
+    corresponds to the intersection of these two regions and shown in
+    a red dashed line. The continuous red line shows the nominal
+    operating bias voltage.}
   \label{fig:depletionVoltage}
 \end{figure}
 
@@ -57,7 +57,7 @@ describes the method used for calculating the depletion.
 
 The dependence of the cluster-size distribution on the bias voltage
 and the operating threshold is shown for the assemblies listed in
-\cref{tab:Timepix3Assemblies}.
+\cref{tab:nominalBiasThreshold}.
 
 \subsection{Cluster size distribution as a function of the bias
   voltage}
@@ -96,7 +96,7 @@ in \cref{fig:clusterSize_vs_biasVoltage}.
   %   \caption{W2\_J5}
   % \end{subfigure}
   \caption{Cluster size distribution as a function of the applied
-    voltage for assemblies listed in \cref{tab:Timepix3Assemblies}.}
+    voltage for assemblies listed in \cref{tab:nominalBiasThreshold}.}
   \label{fig:clusterSize_vs_biasVoltage}
 \end{figure}
 
@@ -135,7 +135,7 @@ size fraction distribution as shown in
     \caption{W5\_F1}
   \end{subfigure}
   \caption{Cluster sizes distribution as a function of the operating
-    threshold for assemblies listed in \cref{tab:Timepix3Assemblies}.}
+    threshold for assemblies listed in \cref{tab:nominalBiasThreshold}.}
   \label{fig:clusterSize_vs_THLscan}
 \end{figure}
 
