--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -711,3 +711,15 @@ abstract = "The ROOT system in an Object Oriented framework for large scale data
       doi            = "10.1016/j.nima.2016.03.072",
       SLACcitation   = "%%CITATION = NUIMA,A823,1;%%"
 }
+
+@article{Arai:2011ara,
+      author         = "Arai, Y. and others",
+      title          = "{Development of SOI pixel process technology}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A636",
+      year           = "2011",
+      number         = "1",
+      pages          = "S31-S36",
+      doi            = "10.1016/j.nima.2010.04.081",
+      SLACcitation   = "%%CITATION = NUIMA,A636,S31;%%"
+}
