--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -18,9 +18,8 @@
 As part of the R\&D programme for the CLIC vertex detector, the
 performance of thin silicon sensors is quantified using the Timepix3
 readout chip with $55\,\micron$ pixel pitch. $50\,\micron$ to
-$150\,\micron$ thick planar sensors are bump-bonded to $750\,\micron$
-thick Timepix3 ASICs. These assemblies are tested in test beams using
-the CLICdp Timepix3 telescope.
+$150\,\micron$ thick planar sensors are bump-bonded to $700\,\micron$
+thick Timepix3 ASICs and tested with particle beams.
 
 The AllPix simulation framework (described in \cref{sec:AllPix}) is
 used to simulate the performance of thin sensors and to understand the
@@ -32,32 +31,18 @@ pitch which is aimed to be achieved for the CLIC vertex detector.
 
 %% --------------------------------------------- %%
 \section{Thin-sensor assemblies}
-A summary of thin sensors ($50-150\,\micron$ thick) bump-bonded to
-Timepix3 readout ASICs is shown in
-\cref{tab:Timepix3Assemblies}. These assemblies are tested using the
+A list of Advacam planar n-in-p thin sensors ($50-150\,\micron$ thick)
+bump-bonded to Timepix3 readout ASICs is shown in
+\cref{tab:nominalBiasThreshold}. These assemblies are tested using the
 CLICdp Timepix3 pixel-beam reference telescope at the CERN SPS with
 the experimental setup as described in \cref{sec:CERN_SPS}.
-
-%% --------------------------------------------- %%
-\subsection{Operating conditions}
-\label{sec:operatingConditions}
-The Timepix3 readout ASICs were operated with the optimised parameters
-as described in \cref{tab:timepix3Operation}. The nominal values for
-the threshold and the bias voltage are shown in
-\cref{tab:nominalBiasThreshold}. For the nominal bias voltage, the
-sensor is fully (or over) depleted. The nominal threshold set, insures
-that the readout chip is not operating in noisy
-conditions. \cref{sec:operatingThreshold} describes the procedure for
-the selection of the nominal threshold value. These nominal values are
-held throughout the data taking except for the cases where the
-threshold or the bias voltages are scanned.
 
 \begin{table}[htbp]
   \centering
   \caption{Nominal operating bias voltage, threshold in DAC and
     calibrated in number of electrons (measured as described in
-    \cref{sec:thresholdCalibration}) for the tested assemblies as
-    shown in \cref{tab:Timepix3Assemblies}.}
+    \cref{sec:thresholdCalibration}) for the Advacam planar n-in-p
+    assemblies bump bonded to Timepix3 ASICs.}
   \label{tab:nominalBiasThreshold}
   \begin{tabular}{lcccc}
     \toprule
@@ -73,6 +58,23 @@ threshold or the bias voltages are scanned.
     \bottomrule
   \end{tabular}
 \end{table}
+
+%% --------------------------------------------- %%
+\subsection{Operating conditions}
+\label{sec:operatingConditions}
+The Timepix3 readout ASICs were operated with the optimised parameters
+as described in \cref{tab:timepix3Operation}. The nominal values for
+the threshold and the bias voltage are shown in
+\cref{tab:nominalBiasThreshold}. For the nominal bias voltage, the
+sensor is fully (or over) depleted. The nominal threshold set, insures
+that the readout chip is not operating in noisy conditions. The error
+on the threshold is due to the threshold dispersion after the chip
+equalisation. \cref{sec:operatingThreshold} describes the procedure
+for the selection of the nominal threshold value. These nominal values
+are held throughout the data taking except for the cases where the
+threshold or the bias voltages are scanned.
+
+
 
 % %% --------------------------------------------- %%
 % \section{Samples and sensors geometries}
@@ -90,7 +92,15 @@ threshold or the bias voltages are scanned.
 % bias scan allows to obtain the depletion voltage.
 
 %% --------------------------------------------- %%
-\section{Calibrated test beam data}
+
+%% --------------------------------------------- %%
+\section{Experimental and simulated results for thin sensors}
+
+This section gives an overview on the performance of thin sensors. The
+AllPix simulations of thin sensors are validated using test-beam data.
+
+
+\subsection{Calibrated test beam data}
 \label{sec:calibrated_test_beam_data}
 
 The test pulse calibration as described in
@@ -101,10 +111,10 @@ in units of the number of electrons generated.
 
 \cref{sec:testBeamDataCalibrated_TOT} shows the TOT distribution for
 one, two, three and four-pixel clusters. The MPV of the TOT
-distributions for different cluster sizes do not align due to the
-non-linear behaviour of the Timepix3, as sharing the same deposited
-charge amongst several pixels results in each pixel having a higher
-TOT than would be expected from simply scaling the charge. The
+distributions for different cluster sizes do not fully align due to
+the non-linear behaviour of the Timepix3, as sharing the same
+deposited charge amongst several pixels results in each pixel having a
+higher TOT than would be expected from simply scaling the charge. The
 calibrated energy distribution aligns for different cluster sizes
 since the calibration takes into account the non-linearities of the
 chip as shown in \cref{sec:testBeamDataCalibrated_Edep}. For the
@@ -127,8 +137,8 @@ energy depositions.
     \caption{W5\_F1}
   \end{subfigure}
   \caption{TOT distribution for one, two, three and four-pixel
-    clusters for various assemblies with (a) $50\,\micron$, (b)
-    $100\,\micron$ and (c) $150\,\micron$ thick planar sensors.}
+    clusters for assemblies with (a) $50\,\micron$, (b) $100\,\micron$
+    and (c) $150\,\micron$ thick planar sensors.}
   \label{sec:testBeamDataCalibrated_TOT}
 \end{figure}
 
@@ -146,8 +156,8 @@ energy depositions.
     \caption{W5\_F1}
   \end{subfigure}
   \caption{Energy deposition distribution for one, two, three and
-    four-pixel clusters for various assemblies with (a) $50\,\micron$,
-    (b) $100\,\micron$ and (c) $150\,\micron$ thick planar sensors.}
+    four-pixel clusters for assemblies with (a) $50\,\micron$, (b)
+    $100\,\micron$ and (c) $150\,\micron$ thick planar sensors.}
   \label{sec:testBeamDataCalibrated_Edep}
 \end{figure}
 
@@ -158,7 +168,11 @@ energy depositions.
 cluster in data and simulation for all cluster sizes combined. The
 most-probable-value and the width of the distributions in data and
 simulation agree. Therefore the calibration is validated using the
-test-beam data.
+test-beam data. For the simulation, the PAI physics list, which
+provides an energy deposition spectrum similar to the Bichsel
+distribution, is used (see \cref{fig:BichselVSG4}). This confirms that
+the Bichsel model describes well the energy deposition in thin silicon
+sensors.
 
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.3\textwidth}
@@ -186,11 +200,6 @@ test-beam data.
 \end{figure}
 
 
-%% --------------------------------------------- %%
-\section{Experimental and simulated results for thin sensors}
-
-This section gives an overview on the performance of thin sensors. The
-AllPix simulations of thin sensors are validated using test-beam data.
 
 %% --------------------------------------------- %%
 \subsection{Measurement of the depletion voltage}
@@ -203,7 +212,7 @@ voltage. For lower bias voltages the sensor is under depleted and
 therefore the collected charge is also reduced. The depletion voltage
 and the sensor thickness are related by \cref{eq:depletionVoltage}.
 
-To obtain the depletion voltage, frist, the distribution of the
+To obtain the depletion voltage, first, the distribution of the
 deposited energy in the sensor is fitted with a landau function
 convoluted with a Gaussian. The fit is done using
 RooFit~\cite{Cranmer:2012sba} and an example is given in
@@ -215,15 +224,16 @@ regions can be seen: a sloped region and a plateau region. The
 depletion voltage of the assembly is obtained by calculating the
 intersection of a linear fit performed on both regions (defined by
 eye). The calculated depletion voltages for all assemblies is
-summarised in \cref{tab:depletionVoltage,fig:depletionVoltage}. The
-$50\,\micron$ thick sensor is depleted at a low bias voltage of
-$\sim$2~V. However the measurement was done with a voltage step size
-of $1$~V and the fits give a higher depletion voltage of $\sim7$~V.
+summarised in \cref{tab:depletionVoltage,fig:depletionVoltage}. 
+
+% The $50\,\micron$ thick sensor is depleted at a low bias voltage of
+% $\sim$2~V. However the measurement was done with a voltage step size
+% of $1$~V and the fits give a higher depletion voltage of $\sim7$~V.
 
 From the depletion voltage, the concentration of the dopants in the
 bulk is calculated to be around
 $N_{bulk}\approx1.3\,\inversemetercubic$ and corresponds to a
-resistivity of $\rho\approx10\,\text{k}\Omega\,\text{cm}$ for all the
+resistivity of $\rho\approx10\,\text{k}\Omega\,\text{cm}$ for all
 assemblies.
 
 \begin{figure}[htbp]\centering
@@ -272,9 +282,9 @@ assemblies.
 
 %% --------------------------------------------- %%
 \subsection{Cluster size distribution}
-The cluster size distribution is an indication on the amount of charge
-sharing in a sensor. For thicker sensors, more charge sharing is
-expected since the charge drifts in a longer distance and diffuses
+The cluster size distribution is an indication for the amount of
+charge sharing in a sensor. For thicker sensors, more charge sharing
+is expected since the charge drifts in a longer distance and diffuses
 across a larger transverse area. The threshold of the readout
 electronics has a large impact on the detection of the charge
 sharing. The threshold should be as low as possible to avoid
@@ -284,9 +294,9 @@ In this analysis, the hit pixels form a cluster with a distance
 criterion of $\sqrt{2}$: pixels sharing common corners or edges are
 considered as clusters. For sensor thicknesses in the range of
 $50\,\micron$-$150\,\micron$, clusters of size one to four are
-expected due to the charge sharing. Larger clusters are expected due
-to other effects such as $\delta$-rays. The most common cluster shapes
-are illustrated in \cref{tab:clusizeShapes}.
+expected due to diffusion. Larger clusters are expected due to other
+effects such as $\delta$-rays. The most common cluster shapes are
+illustrated in \cref{tab:clusizeShapes}.
 
 \begin{table}
   \centering
@@ -329,8 +339,8 @@ are illustrated in \cref{tab:clusizeShapes}.
 
 \cref{fig:G4_simu_data_cluSize} compares the cluster-size distribution
 in simulations and data for the assemblies operated at nominal
-conditions. There is a good agreement between simulation and data in
-terms of cluster-size distribution.
+conditions. There is a good agreement between simulation and data
+within $2\%$.
 
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.3\textwidth}
@@ -405,9 +415,9 @@ good agreement with data. This validates the digitiser as described in
 \begin{figure}[htbp] 
   \centering
   \includegraphics[width=0.5\textwidth]{./figures/TestBeam/cluSize_vs_thickness.pdf}
-  \caption{Cluster-size distribution as a function of sensor thickness
-    for runs recorded under nominal operating conditions. The AllPix
-    simulation is in good agreement with data.}
+  \caption{Cluster-size distribution for data and AllPix simulation as
+    a function of sensor thickness for runs recorded under nominal
+    operating conditions.}
   \label{fig:cluSize_thickness}
 \end{figure}
 
@@ -418,15 +428,15 @@ The charge sharing is studied by extrapolating the track position
 obtained from the Timepix3 telescope to the DUT. The size of the
 clusters depends on the track position within the pixel. For
 perpendicular tracks, multi-pixel clusters are created when the track
-hits the edges or the corners of a pixel, leading to the charge
-sharing between the pixel and its neighbouring pixels. The charge
+hits the edges or the corners of a pixel, leading to sharing of the
+charge between the pixel and its neighbouring pixels. The charge
 sharing is also affected by the operating threshold of the readout
 ASIC. \cref{fig:chargeSharingTrack} illustrates the track position
 within the pixel for 1 to 4-pixel cluster sizes for a $50\,\micron$
 sensor. For other thicknesses, the track position within the pixel is
 shown in
 \cref{fig:chargeSharingTrack_W19_G7,fig:chargeSharingTrack_W5_E2,fig:chargeSharingTrack_W5_F1}. For
-thinner sensors, the track position should be closer to the edges of
+thinner sensors, the track position has to be closer to the edges of
 the pixels to create two-pixel clusters.
 
 \begin{figure}[htbp] \centering
@@ -481,24 +491,25 @@ single-point (or hit) and the track resolutions:
 \end{equation}
 
 In the following, the tracking resolution of $\sim2\,\micron$ is not
-unfolded from the residual measurements presented. 
+unfolded from the residual measurements presented (see
+\cref{sec:TrackResOnDUT}).
 % For the estimation
 % of the single-point resolution, the tracking resolution of
 % $\sim2\,\micron$ at the SPS test beam should be unfolded
 % (c.f.~\cref{ch:Telescope}).
 
-The residuals depend highly on the cluster sizes since the
-reconstructed hit position takes into account the number of the hit
-pixels in a cluster and the charge information in each
-pixel. \cref{fig:residuals_cluSize} illustrates the residuals for a
-$50\,\micron$ thick sensor (assembly W19\_G7) for different cluster
-sizes. For single-pixel clusters, the hit position corresponds to the
-geometric center of the pixel and therefore the charge information can
-not improve the resolution. For multi-pixel clusters, by using the
-charge information, a more accurate interpolation of the hit position
-can be obtained and the resolution is better than the geometrical
-information (by using the $\eta$-correction method as described in
-\cref{sec:EtaCorrection}).
+The residuals depend on the cluster sizes since the reconstructed hit
+position takes into account the number of the hit pixels in a cluster
+and the charge information in each pixel. \cref{fig:residuals_cluSize}
+illustrates the residuals for a $50\,\micron$ thick sensor (assembly
+W19\_G7) for different cluster sizes. For single-pixel clusters, the
+hit position corresponds to the geometric center of the pixel and
+therefore the charge information can not improve the resolution. For
+multi-pixel clusters, the $\eta$-correction method (see
+\cref{sec:EtaCorrection}) provides a more accurate interpolation of
+the hit position using the charge deposition (TOT) in the pixels hit
+and improves the resolution.
+
 
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.23\textwidth}
@@ -520,8 +531,7 @@ information (by using the $\eta$-correction method as described in
   \caption{The residuals for a $50\,\micron$ thick sensor (assembly
     W19\_G7) for different cluster sizes: (a) Cluster size 1
     ($1\times1$), (b) Cluster size 2 ($2\times1$), (c) Cluster size 3
-    ($2\times2$) and (d) Cluster size 4 ($2\times2$). The track
-    resolution of $\sim2\,\micron$ is not unfolded.}
+    ($2\times2$) and (d) Cluster size 4 ($2\times2$).}
   \label{fig:residuals_cluSize}
 \end{figure}
 
@@ -534,7 +544,7 @@ single-pixel clusters. For thicker sensors, the fraction of
 multi-pixel clusters increases. This leads to a higher fraction of
 more precisely reconstructed hits and therefore the residual
 distribution gets narrower. There is a good agreement between
-simulation and data in terms of the residuals distribution.
+simulation and data.
 
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.3\textwidth}
@@ -554,10 +564,10 @@ simulation and data in terms of the residuals distribution.
 
   %%   \caption{$300\,\micron$ p-in-n}
   %% \end{subfigure}
-  \caption{The residuals distribution in the x direction in simulation
-    and data for the assemblies (a) W19\_G7, (b) W5\_E2 and (c)
-    W5\_F1. The assemblies are operated at nominal conditions. The
-    track resolution is not unfolded.}
+  \caption{The residual distribution in the x (column) direction in
+    simulation and data for the assemblies (a) W19\_G7, (b) W5\_E2 and
+    (c) W5\_F1. The assemblies are operated at nominal conditions. The
+    histograms are scaled to have unit area.}
   \label{fig:G4_simu_data_Residuals}
 \end{figure}
 
@@ -589,9 +599,9 @@ The factors affecting the fraction of different cluster sizes such as
 the sensor thickness and the operating conditions of the assembly
 (threshold and bias voltage) affect as well the
 residuals. \cref{fig:Residuals_bias_threshold} shows the RMS of the
-residuals in the x and y directions for a $50\,\micron$ thick sensor
-(assembly W19\_G7) as a function of the bias voltage and the
-threshold. The residuals follow the same trend as the cluster size
+residuals in the x (column) and y (row) directions for a $50\,\micron$
+thick sensor (assembly W19\_G7) as a function of the bias voltage and
+the threshold. The residuals follow the same trend as the cluster size
 distributions: higher fractions of single-pixel clusters result in
 larger residuals.
 
@@ -607,10 +617,9 @@ larger residuals.
     \includegraphics[width=\textwidth]{./figures/TestBeam/residuals_W0019_G07_THLscan.pdf}
     \caption{}
   \end{subfigure}
-  \caption{The RMS of the residuals in x and y directions as a
-    function of (a) bias voltage and (b) threshold for a $50\,\micron$
-    thick sensor (assembly W19\_G7). The track resolution of
-    $\sim2\,\micron$ is not unfolded.}
+  \caption{The RMS of the residuals in x (column) and y (row)
+    directions as a function of (a) bias voltage and (b) threshold for
+    a $50\,\micron$ thick sensor (assembly W19\_G7).}
   \label{fig:Residuals_bias_threshold}
 \end{figure}
 
@@ -620,30 +629,30 @@ RMS of the residuals in the x and y directions as a function of the
 sensor thickness are shown in \cref{fig:residuals_thickness}. For
 thicker sensors the fraction of multi-pixel clusters is higher and
 results in lower residuals. Again, a good agreement between data and
-simulation is observed.
+simulation is observed (less than $4\%$ deviation).
 
 \begin{figure}[htbp] 
   \centering
   \includegraphics[width=0.5\textwidth]{./figures/TestBeam/residuals_vs_thickness.pdf}
   \caption{The RMS of the residuals in x and y directions as a
     function of the sensor thickness for assemblies operated at the
-    nominal condition. The track resolution is not
-    unfolded. Simulation and data are in good agreement.}
+    nominal condition.}
   \label{fig:residuals_thickness}
 \end{figure}
 
 
 
 %% --------------------------------------------- %%
-\subsection{Global detection efficiency}
+\subsection{Detection efficiency}
 
 The detection efficiency of the assemblies is defined as the fraction
-of total number of hits matched to tracks (within a window of radius
-0.1~mm) and the total number of tracks projected to pass through the
-assembly. The efficiency is calculated within the matrix of
-$256\times256$ pixels of the main sensor area and the hot or masked
-pixels are not excluded from this calculation. They contribute to the
-assemblies' inefficiencies.
+of total number of hits matched to tracks (within a circle of radius
+0.1~mm around the predicted track position) and the total number of
+tracks projected to pass through the assembly. The efficiency is
+calculated within the matrix of $256\times256$ pixels of the main
+sensor area. The calculation of the efficiency does not exclude the
+track hitting the masked or hot pixels, therefore the efficiency is
+slightly lower than $100\%$.
 
 The detection efficiency is strongly related to the operating
 threshold of the readout ASIC. With a lower threshold, smaller energy
@@ -666,9 +675,7 @@ increasing the threshold than for thick sensors.
   \caption{(a) Global detection efficiency as a function of the
     threshold of the readout ASIC for different sensor thicknesses
     (for the assemblies W19\_L8, W5\_E2 and W5\_F1). (b) focuses on
-    the efficiencies between $95\%$ and $100\%$. The calculation of
-    the efficiency does not exclude the track hitting the masked
-    pixels, therefore the efficiency is slightly lower than $100\%$.}
+    the efficiencies between $95\%$ and $100\%$.}
   \label{fig:efficiency_VS_Threshold}
 \end{figure}
 
@@ -688,29 +695,23 @@ increasing the threshold than for thick sensors.
 %% --------------------------------------------- %%
 \section{Extrapolation to smaller pixels}
 
-As seen in this chapter, the Timepix3 readout ASIC is used as a test
-vehicle for the characterisation of thin sensors. The test-beam
-measurements and the AllPix simulations show a good
-agreement. Although, the Timepix3 ASIC has a pixel pitch of
-$55\,\micron$ and the goal for the CLIC vertex detector is to achieve
-pixels of pitch $25\,\micron$. The CLICpix readout ASIC~\cite{clicpix}
-implemented in 65~nm CMOS technology with a pitch of $25\,\micron$ is
-under development. But miniaturisation presents limits in the size of
-the bump bonding, wire bonding pads as well as cross talks between the
-pixels. A single-chip indium bump bonding process for $25\,\micron$
-pitch has been developed at SLAC~\cite{SLACBumpBonding} and a few
-assemblies with $200\,\micron$ thick planar sensors are successfully
-bump-bonded to CLICpix ASICs. The yield stays limited and unconnected,
-shorted and dead pixels are present~\cite{AlipourTehrani2016}. At the
-moment, these assemblies can not be used to fully characterise the
-thin sensors.
+The Timepix3 readout ASIC has been used as a test vehicle for the
+characterisation of thin sensors. The test-beam measurements and the
+AllPix simulations show a good agreement. However, the Timepix3 ASIC
+has a pixel pitch of $55\,\micron$ and the goal for the CLIC vertex
+detector is to achieve pixels of pitch $25\,\micron$. The CLICpix
+readout ASIC~\cite{clicpix} implemented in 65~nm CMOS technology with
+a pitch of $25\,\micron$ is under development. A single-chip indium
+bump bonding process for $25\,\micron$ pitch is under development at
+SLAC~\cite{SLACBumpBonding} and a few assemblies with $50\,\micron$
+and $200\,\micron$ thick planar sensors are successfully bump-bonded
+to CLICpix ASICs. These assemblies are currently under
+study~\cite{AlipourTehrani2016}.
 
 Previously, we have seen a good agreement between the AllPix
 simulations and the data taken in the test beams for thin silicon
 sensors. The simulation can be used to predict the performance of thin
-sensors and small pitches in terms of charge sharing without taking
-into account the features due to the miniaturisation of the bumps or
-the performance of the CLICpix ASIC.
+sensors and small pitches in terms of charge sharing.
 
 Figure~\ref{fig:cluSize25Pitch} shows the cluster-size distribution
 and the hit residuals for an extrapolation of the simulation to
@@ -724,12 +725,18 @@ ionising particles contain one pixel (the fraction of single-pixel
 clusters with a $55\,\micron$ pitch is $\sim 83\%$). The residual
 distribution is therefore dominated by the broad peak from
 single-pixel clusters and the resulting resolution of
-$\sim6.4\,\micron$ (the tracking resolution is not unfolded) is still
-significantly worse than the required $3\,\micron$. It can be
-concluded that the required resolution can not be achieved with the
-$25\,\micron$ pitch. Smaller pixels can show other limiting
-factors. The CLIC pixel detector R\&D is considering new solution
-where planar sensors are not used.
+$\sim6.4\,\micron$ (the tracking resolution of $\sim2\,\micron$ is not
+unfolded) is still significantly worse than the required
+$3\,\micron$. It can be concluded that the required resolution can not
+be achieved with planar sensors of $50\,\micron$ thick and
+$25\,\micron$ pitch. New sensor concepts with enhanced charge sharing
+or integrated technologies with even smaller pixel
+pitch~\cite{Arai:2011ara} are therefore required.
+
+
+% the $25\,\micron$ pitch. Smaller pixels can show
+% other limiting factors. The CLIC pixel detector R\&D is considering
+% new solution where planar sensors are not used.
 
 
 \begin{figure}[htbp]\centering
@@ -749,20 +756,22 @@ where planar sensors are not used.
 \end{figure}
 
 
+
+
+
 \section{Summary}
 \label{sec:Summary_ThinSensors}
 
-In this chapter, we give an overview on the test-beam measurements and
-\textsc{Geant4}-based simulation studies for thin sensors using the
-Timepix3 ASIC. The simplified model for the diffusion of charges in
-silicon as described in \cref{sec:allpix_digitisation} gives a good
-agreement with data in terms of energy-deposition spectrum,
-cluster-size distribution and residuals distribution. Therefore, the
-simulation is used for predicting the resolution of $50\,\micron$ thin
-sensors with small pixel sizes of $25\,\micron$. This prediction shows
-the limits of charge sharing for thin planar sensors even with small
-pixel sizes on top of other constraints due to the miniaturisation of
-pixels. 
+Test-beam measurements and \textsc{Geant4}-based simulation studies
+for thin sensors using the Timepix3 ASIC are in good agreement. The
+simplified model for the diffusion of charges in silicon as described
+in \cref{sec:allpix_digitisation} gives a good agreement with data in
+terms of energy-deposition spectrum, cluster-size distribution and
+residuals distribution. Therefore, the simulation is used for
+predicting the resolution of $50\,\micron$ thin sensors with small
+pixel sizes of $25\,\micron$. This prediction shows the difficulty to
+achieve the required 3 um resolution with very thin planar sensors.
+
 
 %% \begin{figure}[htbp] 
 %%   \centering
